--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity">
+    tools:context=".game.MainActivity"
+    tools:ignore="MissingDefaultResource">
 
-    <SurfaceView
-        android:id="@+id/surfaceview1"
+    <demon.genmo3.game.core.Engine
+        android:id="@+id/gameView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:id="@+id/skill4"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="576dp"
+            android:layout_marginTop="200dp"
+            android:layout_marginBottom="140dp"
+            app:srcCompat="?android:attr/textSelectHandleLeft" />
+
+        <ImageButton
+            android:id="@+id/right"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="110dp"
+            android:layout_marginTop="250dp"
+            android:layout_marginBottom="49dp"
+            app:srcCompat="@android:drawable/ic_media_ff" />
+
+        <ImageButton
+            android:id="@+id/skill1"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="402dp"
+            android:layout_marginTop="280dp"
+            android:layout_marginBottom="30dp"
+            app:srcCompat="?android:attr/textSelectHandleLeft" />
+
+        <ImageButton
+            android:id="@+id/attack"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="470dp"
+            android:layout_marginTop="250dp"
+            android:layout_marginBottom="47dp"
+            app:srcCompat="@android:drawable/ic_lock_idle_charging" />
+
+        <ImageButton
+            android:id="@+id/left"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="250dp"
+            android:layout_marginBottom="0dp"
+            app:srcCompat="@android:drawable/ic_media_rew" />
+
+        <ImageButton
+            android:id="@+id/skill3"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="518dp"
+            android:layout_marginTop="200dp"
+            android:layout_marginBottom="140dp"
+            app:srcCompat="?android:attr/textSelectHandleLeft" />
+
+        <ImageButton
+            android:id="@+id/item"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="402dp"
+            android:layout_marginTop="220dp"
+            android:layout_marginBottom="210dp"
+            app:srcCompat="?android:attr/textSelectHandleLeft" />
+
+        <ImageButton
+            android:id="@+id/skill2"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="460dp"
+            android:layout_marginTop="200dp"
+            android:layout_marginBottom="139dp"
+            app:srcCompat="?android:attr/textSelectHandleLeft" />
+
+        <ImageButton
+            android:id="@+id/jump"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="544dp"
+            android:layout_marginTop="250dp"
+            android:layout_marginBottom="46dp"
+            app:srcCompat="@android:drawable/arrow_up_float" />
+    </FrameLayout>
+
+</RelativeLayout>
